--- a/Animation/Assembly-CSharp-Editor-firstpass.csproj
+++ b/Animation/Assembly-CSharp-Editor-firstpass.csproj
@@ -346,6 +346,12 @@
  <Reference Include="UnityEditor.iOS.Extensions">
  <HintPath>/Applications/Unity/Hub/Editor/2019.4.11f1/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.dll</HintPath>
  </Reference>
+ <Reference Include="DOTweenEditor">
+ <HintPath>/Users/romanlu/playtikaunityacademy/AnimatorLesson/Animation/Assets/Plugins/Demigiant/DOTween/Editor/DOTweenEditor.dll</HintPath>
+ </Reference>
+ <Reference Include="DOTween">
+ <HintPath>/Users/romanlu/playtikaunityacademy/AnimatorLesson/Animation/Assets/Plugins/Demigiant/DOTween/DOTween.dll</HintPath>
+ </Reference>
  <Reference Include="nunit.framework">
  <HintPath>/Users/romanlu/playtikaunityacademy/AnimatorLesson/Animation/Library/PackageCache/com.unity.ext.nunit@1.0.0/net35/unity-custom/nunit.framework.dll</HintPath>
  </Reference>
